--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -1,7 +1,12 @@
+# Trigger a scan on every Monday at 00:00:00 UTC
 name: scan-docker
 
 on:
-  push
+  pull_request:
+    branches:
+      - master
+  schedule:
+    - cron: 0 0 * * 1
 
 jobs:
   snyk:
@@ -18,13 +23,13 @@ jobs:
           pushd slack-post-msg
           docker build -t slack:latest .
           popd
-      - name: Run Snyk to check Docker image for vulnerabilities
+      - name: Run Snyk to check samson-create-release image for vulnerabilities
         uses: zendesk/snyk_actions/docker@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           image: samson:latest
-      - name: Run Snyk to check Docker image for vulnerabilities
+      - name: Run Snyk to check slack-post-msg image for vulnerabilities
         uses: zendesk/snyk_actions/docker@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
