Allowing custom display icon

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: compute_tag
-        uses: craig-day/compute-tag@v10
+        uses: zendesk/compute-tag@v10
         with:
           github_token: ${{ github.token }}
           version_type: patch
