--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ jobs:
           github_token: ${{ github.token }}
           version_type: patch
       - name: create release
-        uses: actions/create-release@v1
+        uses: zendesk/create-release@v1
         with:
           tag_name: ${{ steps.compute_tag.outputs.next_tag }}
           release_name: ${{ steps.compute_tag.outputs.next_tag }}
