--- a/tag-semantic-release/action.yaml
+++ b/tag-semantic-release/action.yaml
@@ -1,5 +1,5 @@
-name: 'Create Release'
-description: 'Greet someone'
+name: 'Create semantic release'
+description: 'Create semantic release'
 inputs:
   version-type:
     required: true
@@ -13,6 +13,8 @@ runs:
   steps:
     - run: |
 
+        echo "sen0.0.2"
+        export GITHUB_TOKEN=${{ inputs.github-token }}
         if [ ${{ inputs.debug }} = true ]; then
           set -x
         fi
@@ -32,9 +34,9 @@ runs:
         tags=$(git for-each-ref refs/tags --sort=-taggerdate --format='%(refname)' --count=5)
 
         # Find a semantic version
-        current_tag="0.0.1"
+        current_tag="v0.0.0"
         for tag in tags; do
-          if [[ $tag =~ "[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}" ]]; then
+          if [[ $tag =~ "v[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}" ]]; then
             current_tag=$tag
             echo "Found the latest semantic tag $tag"
             break
@@ -44,13 +46,14 @@ runs:
         # Turn string to array
         tag_array=($(echo "$current_tag" | tr '.' '\n'))
 
+        # Must have 3 elements in the array
         if [[ $( echo "${#tag_array[@]}") != 3 ]]; then
           echo "Invalud tag $current_tag"
           exit 1
         fi
 
         type=${{ inputs.version-type }}
-        major=${tag_array[0]}
+        major=$(echo "${tag_array[0]}" | tr -d "v" )
         minor=${tag_array[1]}
         patch=${tag_array[2]}
 
@@ -66,8 +69,17 @@ runs:
             patch=$(( $patch + 1 ))
             ;;
           *)
+            echo "Invalid version type: $type"
+            exit 1
+            ;;
         esac
 
-        echo "$major.$minor.$patch"
+        new_tag="v$major.$minor.$patch"
+        echo "new tag: $new_tag"
+
+        git config --global user.name 'zendesk-ops-ci'
+        git config --global user.email 'zendesk-ops-ci@zendesk.com'
+        git config --global hub.protocol https
+        hub release create -m "$new_tag" $new_tag
 
       shell: bash
