--- a/tag-semantic-release/action.yaml
+++ b/tag-semantic-release/action.yaml
@@ -1,5 +1,5 @@
-name: 'Create semantic release'
-description: 'Create semantic release'
+name: 'Tag semantic release'
+description: 'Tag semantic release'
 inputs:
   version-type:
     required: true
@@ -13,7 +13,7 @@ runs:
   steps:
     - run: |
 
-        echo "csr v0.0.5"
+        echo "tsr v0.0.8"
         export GITHUB_TOKEN=${{ inputs.github-token }}
         git config --global user.name 'zendesk-ops-ci'
         git config --global user.email 'zendesk-ops-ci@zendesk.com'
@@ -36,13 +36,12 @@ runs:
 
         # Last 5 recent tags
         git fetch --tags --quiet
-        tags=$(git for-each-ref refs/tags --sort=-taggerdate --format='%(refname)' --count=5)
+        tags=$(git for-each-ref refs/tags --sort=-creatordate '--format=%(refname:lstrip=2)' --count=5)
 
         # Find a semantic version
         current_tag="v0.0.0"
-        for tag in tags; do
-          t=$(echo $tag | tr -d "refs/tags/v1")
-          if [[ $t =~ "v[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}" ]]; then
+        for tag in $tags; do
+          if [[ $tag =~ ^v[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3} ]]; then
             current_tag=$tag
             echo "Found the latest semantic tag $tag"
             break
