--- a/tag-semantic-release/action.yaml
+++ b/tag-semantic-release/action.yaml
@@ -1,5 +1,6 @@
 name: 'Tag semantic release'
-description: 'Tag semantic release'
+description: 'Tag semantic release for your default branch'
+author: 'Andy Hsieh'
 inputs:
   version-type:
     required: true
@@ -15,7 +16,7 @@ runs:
   steps:
     - run: |
 
-        echo "tsr v0.0.9"
+        echo "tsr v0.0.10"
         export GITHUB_TOKEN=${{ inputs.github-token }}
         git config --global user.name 'zendesk-ga'
         git config --global user.email 'zendeak-ga@zendesk.com'
@@ -40,7 +41,7 @@ runs:
         git fetch --tags --quiet
         tags=$(git for-each-ref refs/tags --sort=-creatordate '--format=%(refname:lstrip=2)' --count=5)
 
-        # Find a semantic version
+        # Find the latest semantic version
         current_tag="v0.0.0"
         for tag in $tags; do
           if [[ $tag =~ ^v[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3} ]]; then
@@ -50,7 +51,7 @@ runs:
           fi
         done
 
-        # Turn string to array
+        # Turn string to an array
         tag_array=($(echo "$current_tag" | tr '.' '\n'))
 
         # Must have 3 elements in the array
@@ -82,7 +83,7 @@ runs:
         esac
 
         new_tag="v$major.$minor.$patch"
-        echo "new tag: $new_tag"
+        echo "New tag: $new_tag"
 
         if [ ${{ inputs.dry-run }} = false ]; then
           hub release create -m "$new_tag" $new_tag
