--- a/tag-semantic-release/action.yaml
+++ b/tag-semantic-release/action.yaml
@@ -1,10 +1,10 @@
-name: 'Tag semantic release'
-description: 'Tag semantic release for your default branch'
-author: 'Andy Hsieh'
+name: Tag semantic release
+description: Tag semantic release for your default branch
+author: Andy Hsieh
 inputs:
   version-type:
     required: true
-    default: 'patch'
+    default: patch
   github-token:
     required: true
   debug:
@@ -22,7 +22,7 @@ runs:
         echo "tsr v0.0.11"
         export GITHUB_TOKEN=${{ inputs.github-token }}
         git config --global user.name 'zendesk-ga'
-        git config --global user.email 'zendeak-ga@zendesk.com'
+        git config --global user.email 'zendesk-ga@zendesk.com'
         git config --global hub.protocol https
 
         if [ ${{ inputs.debug }} = true ]; then
@@ -30,8 +30,8 @@ runs:
         fi
 
         if [[ ! -x "$(which hub)" ]]; then
-          echo "Missing hub cli, install it here:"
-          echo "https://github.com/github/hub"
+          echo "::error::Missing hub CLI, install it here:"
+          echo "::error::https://github.com/github/hub"
           exit 1
         fi
 
@@ -42,14 +42,14 @@ runs:
 
         # Last 5 recent tags
         git fetch --tags --quiet
-        tags=$(git for-each-ref refs/tags --sort=-creatordate '--format=%(refname:lstrip=2)' --count=5)
+        tags=$(git for-each-ref refs/tags --sort=-creatordate --format="%(refname:lstrip=2)" --count=5)
 
         # Find the latest semantic version
         current_tag="v0.0.0"
         for tag in $tags; do
           if [[ $tag =~ ^v[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3} ]]; then
             current_tag=$tag
-            echo "Found the latest semantic tag $tag"
+            echo "Found the latest semantic tag as: $tag"
             break
           fi
         done
@@ -58,8 +58,8 @@ runs:
         tag_array=($(echo "$current_tag" | tr '.' '\n'))
 
         # Must have 3 elements in the array
-        if [[ $( echo "${#tag_array[@]}") != 3 ]]; then
-          echo "Invalid tag $current_tag"
+        if [[ ${#tag_array[@]} != 3 ]]; then
+          echo "::error::Invalid tag $current_tag"
           exit 1
         fi
 
@@ -67,7 +67,6 @@ runs:
         major=$(echo "${tag_array[0]}" | tr -d "v" )
         minor=${tag_array[1]}
         patch=${tag_array[2]}
-
 
         case $type in
           "major")
@@ -80,13 +79,13 @@ runs:
             patch=$(( $patch + 1 ))
             ;;
           *)
-            echo "Invalid version type: $type"
+            echo "::error::Invalid version type: $type"
             exit 1
             ;;
         esac
 
         new_tag="v$major.$minor.$patch"
-        echo "::set-output name=version::$(echo $new_tag)"
+        echo "::set-output name=version::$new_tag"
         echo "New tag: $new_tag"
 
         if [ ${{ inputs.dry-run }} = false ]; then
