--- a/tag-semantic-release/action.yaml
+++ b/tag-semantic-release/action.yaml
@@ -19,7 +19,7 @@ runs:
   steps:
     - run: |
 
-        echo "tsr v0.0.13"
+        echo "tsr v0.0.14"
         export GITHUB_TOKEN=${{ inputs.github-token }}
         git config --global user.name 'zendesk-ga'
         git config --global user.email 'zendesk-ga@zendesk.com'
@@ -80,4 +80,5 @@ runs:
         if [ ${{ inputs.dry-run }} = false ]; then
           hub release create -m "$new_tag" $new_tag
         fi
+      shell: bash
       id: main
