--- a/tag-semantic-release/action.yaml
+++ b/tag-semantic-release/action.yaml
@@ -15,7 +15,7 @@ outputs:
   version:
     value: ${{ steps.main.outputs.version }}
 runs:
-  using: "composite"
+  using: composite
   steps:
     - run: |
 
