Swap out use of `github.event.pull_request.head.ref` with the less verbose `github.head_ref` - which holds the same value

--- a/samson-inbound-webhook/action.yaml
+++ b/samson-inbound-webhook/action.yaml
@@ -28,7 +28,7 @@ runs:
         branchName="${{ inputs.branch }}"
         if [[ -z $branchName ]]; then
           # extract branch name (either pull request head or workflow trigger)
-          branchName="${{ github.event.pull_request.head.ref }}"
+          branchName="${{ github.head_ref }}"
           if [[ -z $branchName ]]; then
             # not a pull request workflow run
             branchName="${{ github.ref }}"
