Fix conditional operator

--- a/tag-semantic-release/action.yaml
+++ b/tag-semantic-release/action.yaml
@@ -8,7 +8,7 @@ inputs:
   github-token:
     required: true
   assets:
-    default: none
+    default: ""
   debug:
     default: false
   dry-run:
@@ -79,7 +79,7 @@ runs:
         echo "New tag: $new_tag"
 
         if [ ${{ inputs.dry-run }} = false ]; then
-          if [[ ${{ inputs.assets }} != none ]]; then
+          if [[ -n ${{ inputs.assets }} ]]; then
             assets=()
             for f in ${{ inputs.assets }}; do && assets+=(-a "$f"); done
             hub release create "${assets[@]}" -m "Release $new_tag" "$new_tag"
