Add a v to return values

--- a/samson-inbound-webhook/action.yaml
+++ b/samson-inbound-webhook/action.yaml
@@ -61,7 +61,7 @@ runs:
         version=$(echo "$response" | jq .release.number)
 
         echo "$response"
-        echo "::set-output name=next_version::$(echo $version)"
-        echo "::set-output name=previous_version::$(expr $version - 1)"
+        echo "::set-output name=next_version::v$(echo $version)"
+        echo "::set-output name=previous_version::v$(expr $version - 1)"
         echo "::set-output name=response::$(echo $response)"
       shell: bash
